Andamento do Capítulo 4

--- a/cap4.ipynb
+++ b/cap4.ipynb
@@ -806,6 +806,296 @@
     "u16be = 'El Niño'.encode('utf_16be')\n",
     "list(u16be)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1757a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Um código que precisa rodar em diversos computadores ou em várias\n",
+    "ocasiões jamais deve depender de codificação default. Sempre passe\n",
+    "um argumento encoding= explícito ao abrir arquivos-texto, pois o \n",
+    "default poderá mudar de um computador para o outro, ou de um dia para \n",
+    "outro - pág 145\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9ffdc121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='cafe.txt' mode='w' encoding='utf_8'>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp = open('cafe.txt', 'w', encoding='utf_8')\n",
+    "fp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fcc2e87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp.write('café')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "113d38c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp.close()\n",
+    "import os\n",
+    "os.stat('cafe.txt').st_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ad6ed6d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='cafe.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp2 = open('cafe.txt')\n",
+    "fp2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6f6629a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'UTF-8'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp2.encoding\n",
+    "#Se tivesse no Windows 8 resultaria em 'cp1252'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6f61a27c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'café'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp2.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fe25bb91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='cafe.txt' mode='r' encoding='utf_8'>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp3 = open('cafe.txt', encoding='utf_8')\n",
+    "fp3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "62c703d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'café'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp3.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2fddb66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedReader name='cafe.txt'>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp4 = open('cafe.txt', 'rb')\n",
+    "fp4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d3c3e04c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'caf\\xc3\\xa9'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp4.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f851991c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "locale.getpreferredencoding(), -> ('UTF-8',)\n",
+      "                type(my_file), -> (<class '_io.TextIOWrapper'>,)\n",
+      "             my_file.encoding, -> ('UTF-8',)\n",
+      "          sys.stdout.isatty(), -> (False,)\n",
+      "          sys.stdout.encoding, -> ('UTF-8',)\n",
+      "           sys.stdin.isatty(), -> (False,)\n",
+      "           sys.stdin.encoding, -> ('utf-8',)\n",
+      "          sys.stderr.isatty(), -> (False,)\n",
+      "          sys.stderr.encoding, -> ('UTF-8',)\n",
+      "     sys.getdefaultencoding(), -> ('utf-8',)\n",
+      "   sys.getfilesystemencoding() -> 'utf-8'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, locale\n",
+    "\n",
+    "expressions = \"\"\"\n",
+    "    locale.getpreferredencoding(),\n",
+    "    type(my_file),\n",
+    "    my_file.encoding,\n",
+    "    sys.stdout.isatty(),\n",
+    "    sys.stdout.encoding,\n",
+    "    sys.stdin.isatty(),\n",
+    "    sys.stdin.encoding,\n",
+    "    sys.stderr.isatty(),\n",
+    "    sys.stderr.encoding,\n",
+    "    sys.getdefaultencoding(),\n",
+    "    sys.getfilesystemencoding()\n",
+    "\"\"\"\n",
+    "\n",
+    "my_file = open('../dummy', 'w')\n",
+    "\n",
+    "for expression in expressions.split():\n",
+    "    value = eval(expression)\n",
+    "    print(expression.rjust(30), '->', repr(value))\n",
+    "#Em Windows, as decodificações seriam diferentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945357ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
