--- a/outros/alg_grafos_problemas.ipynb
+++ b/outros/alg_grafos_problemas.ipynb
@@ -18,64 +18,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "859d1625",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grafo = {\"Carlos\": {\"Ana\", \"João\", \"Pedro\"}, \n",
-    "         \"João\": {\"Pedro\"}, \n",
-    "         \"Adriana\": {\"Carlos\", \"Luana\", \"Fernanda\", \"Pedro\"}, \n",
-    "         \"Luana\": {\"Ana\", \"João\", \"Pedro\"}, \n",
-    "         \"Gabriela\": {\"Fernanda\", \"Pedro\"}, \n",
-    "         \"Fernanda\": {\"Ana\", \"Pedro\"}, \n",
-    "         \"Pedro\": {}, \n",
-    "         \"Ana\": {\"Pedro\", \"João\"}}"
+    "grafo = {1: {2, 7, 8}, \n",
+    "         2: {7}, \n",
+    "         3: {1, 4, 6, 7}, \n",
+    "         4: {2, 7, 8}, \n",
+    "         5: {6, 7}, \n",
+    "         6: {7, 8}, \n",
+    "         7: {}, \n",
+    "         8: {2, 7}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "53aefb8d",
+   "execution_count": 13,
+   "id": "5b85294a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encontrar_celebridade(grafo):\n",
-    "    conhecidos = set(grafo.keys())\n",
-    "    sem_amigos = set()\n",
+    "def encontrar_celebridade_1(grafo):\n",
+    "    sem_conhecidos = None\n",
     "    for pessoa in grafo:\n",
-    "        if grafo[pessoa]:\n",
-    "            conhecidos = grafo[pessoa] & conhecidos\n",
-    "        else:\n",
-    "            if sem_amigos:\n",
+    "        if not grafo[pessoa]:\n",
+    "            if sem_conhecidos is not None:\n",
     "                return None\n",
     "            else:\n",
-    "                sem_amigos.add(pessoa)\n",
-    "    if sem_amigos.issubset(conhecidos):\n",
-    "        return sem_amigos\n",
-    "    else:\n",
-    "        return None"
+    "                sem_conhecidos = pessoa\n",
+    "    for pessoa in grafo:\n",
+    "        if pessoa != sem_conhecidos and sem_conhecidos not in grafo[pessoa]:\n",
+    "            return None\n",
+    "    return sem_conhecidos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "896eacc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Pedro'}"
+       "7"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "encontrar_celebridade(grafo)"
+    "encontrar_celebridade_1(grafo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4dd48cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grafo = (None,\n",
+    "         {2, 7, 8}, \n",
+    "         {7}, \n",
+    "         {1, 4, 6, 7}, \n",
+    "         {2, 7, 8}, \n",
+    "         {6, 7}, \n",
+    "         {7, 8}, \n",
+    "         set(), \n",
+    "         {2, 7})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "949a860d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encontrar_celebridade_2(grafo):\n",
+    "    menor_celebridade = 1\n",
+    "    for pessoa in range(2, len(grafo)):\n",
+    "        if pessoa in grafo[menor_celebridade]:\n",
+    "            menor_celebridade = pessoa\n",
+    "    if len(grafo[menor_celebridade]) > 0:\n",
+    "        return None\n",
+    "    for pessoa in range(1, len(grafo)):\n",
+    "        if pessoa != menor_celebridade and menor_celebridade not in grafo[pessoa]:\n",
+    "            return None\n",
+    "    return menor_celebridade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c3124916",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encontrar_celebridade_2(grafo)"
    ]
   },
   {
@@ -94,44 +150,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "id": "48e6413c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grafo = {(\"A\",    56_000): {\"B\", \"C\", \"D\", \"E\", \"F\"},\n",
-    "         (\"B\",   777_000): {\"A\", \"D\", \"E\", \"F\"},\n",
-    "         (\"C\", 1_580_000): {\"A\", \"E\"},\n",
-    "         (\"D\", 1_900_984): {\"B\", \"A\", \"E\"},\n",
-    "         (\"E\", 1_394_223): {\"A\", \"B\", \"C\", \"D\", \"E\"},\n",
-    "         (\"F\",   245_000): {\"A\", \"B\", \"E\"}}"
+    "grafo = [None,\n",
+    "         (56_000, {2, 3, 4, 5, 6}),\n",
+    "         (777_000, {1, 4, 5, 6}),\n",
+    "         (1_580_000, {1, 5}),\n",
+    "         (1_900_984, {1, 2, 5}),\n",
+    "         (1_394_223, {1, 2, 3, 4, 6}),\n",
+    "         (245_000, {1, 2, 5})]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "id": "22162d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quantidade_estrada(grafo):\n",
-    "    candidatas = set()\n",
+    "def quantidade_estrada_1(grafo):\n",
+    "    metropoles = []\n",
     "    qt_estradas = 0\n",
-    "    for cidade in grafo:\n",
-    "        if cidade[1] >= 1_000_000:\n",
-    "            for outra_cidade in grafo[cidade]:\n",
-    "                estrada = tuple(sorted([cidade[0], outra_cidade]))\n",
-    "                if estrada in candidatas:\n",
-    "                    qt_estradas += 1\n",
-    "                else:\n",
-    "                    candidatas.add(estrada)\n",
-    "    return qt_estradas\n",
-    "    "
+    "    for i in range(1, len(grafo)):\n",
+    "        if grafo[i][0] > 1_000_000:\n",
+    "            metropoles.append(i)\n",
+    "    for i, metropole in enumerate(metropoles):\n",
+    "        for outra_metropole in metropoles[i + 1:]:\n",
+    "            if (metropole in grafo[outra_metropole][1] and \n",
+    "                outra_metropole in grafo[metropole][1]):\n",
+    "                qt_estradas += 1\n",
+    "    return qt_estradas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "id": "c39077ae",
    "metadata": {},
    "outputs": [
@@ -141,13 +197,105 @@
        "2"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "quantidade_estrada(grafo)"
+    "quantidade_estrada_1(grafo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "6eef2360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quantidade_estrada_2(grafo):\n",
+    "    qt_estradas = 0\n",
+    "    for i in range(1, len(grafo)):\n",
+    "        if grafo[i][0] > 1_000_000:\n",
+    "            for vizinho in grafo[i][1]:\n",
+    "                if grafo[vizinho][0] > 1_000_000:\n",
+    "                    qt_estradas += 1\n",
+    "    return qt_estradas // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "655ee458",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantidade_estrada_2(grafo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "051a1ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cidades = [None,\n",
+    "           56_000,\n",
+    "           777_000,\n",
+    "           1_580_000,\n",
+    "           1_900_984,\n",
+    "           1_394_223,\n",
+    "           245_000]\n",
+    "arestas = [(1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (2, 4), (2, 5), (2, 6), (3, 5), (4, 5), (5, 6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "ad419a75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quantidade_estrada_3(arestas, cidades):\n",
+    "    qt_estradas = 0\n",
+    "    for aresta in arestas:\n",
+    "        cidade1, cidade2 = aresta[0], aresta[1]\n",
+    "        if cidades[cidade1] > 1_000_000 and cidades[cidade2] > 1_000_000:\n",
+    "            qt_estradas += 1\n",
+    "    return qt_estradas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "a93d64f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantidade_estrada_3(arestas, cidades)"
    ]
   }
  ],
