--- a/cap4.ipynb
+++ b/cap4.ipynb
@@ -1095,7 +1095,867 @@
    "id": "945357ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Normalizando Unicode para comparações mais seguras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "743eb2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('café', 'café')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = 'café'\n",
+    "s2 = 'cafe\\u0301'\n",
+    "s1, s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f5b81949",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(s1), len(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "45cac8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 == s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fdff49e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from unicodedata import normalize\n",
+    "s1 = 'café' # 'e' composto com acento agudo\n",
+    "s2 = 'cafe\\u0301' # 'e' decomposto e acento agudo\n",
+    "len(s1), len(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f209ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(normalize('NFC', s1)), len(normalize('NFC', s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d1de8174",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(normalize('NFD', s1)), len(normalize('NFD', s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fff8b1f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize('NFC', s1) == normalize('NFC', s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "06477720",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize('NFD', s1) == normalize('NFD', s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9adc6b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OHM SIGN'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from unicodedata import normalize, name\n",
+    "ohm = '\\u2126'\n",
+    "name(ohm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "11eb0024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GREEK CAPITAL LETTER OMEGA'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohm_c = normalize('NFC', ohm)\n",
+    "name(ohm_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fbd6bdc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohm == ohm_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "953157fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize('NFC', ohm) == normalize('NFC', ohm_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "18d24146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1⁄2'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from unicodedata import normalize, name\n",
+    "half = '½'\n",
+    "normalize('NFKC', half)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7540b7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'42'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "four_squared = '4²'\n",
+    "normalize('NFKC', four_squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c1d979b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('µ', 'μ')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "micro = 'µ'\n",
+    "micro_kc = normalize('NFKC', micro)\n",
+    "micro, micro_kc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4cd4c4e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(181, 956)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord(micro), ord(micro_kc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "52130a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('MICRO SIGN', 'GREEK SMALL LETTER MU')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name(micro), name(micro_kc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a05a7a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MICRO SIGN'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "micro = 'µ'\n",
+    "name(micro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e5a02289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GREEK SMALL LETTER MU'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "micro_cf = micro.casefold()\n",
+    "name(micro_cf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a9a52d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('µ', 'μ')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "micro, micro_cf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7ff00ba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LATIN SMALL LETTER SHARP S'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eszett = 'ß'\n",
+    "name(eszett)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b5da84be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('ß', 'ss')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eszett_cf = eszett.casefold()\n",
+    "eszett, eszett_cf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2f9e968f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nfc_equal(str1, str2):\n",
+    "    return normalize('NFC', str1) == normalize('NFC', str2)\n",
+    "def fold_equal(str1, str2):\n",
+    "    return (normalize('NFC', str1).casefold() == \n",
+    "            normalize('NFC', str2).casefold())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc34fdb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = 'café'\n",
+    "s2 = 'cafe\\u0301'\n",
+    "s1 == s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d940279f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nfc_equal(s1, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "27706870",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nfc_equal('a', 'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "97f5400e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3 = 'Strße'\n",
+    "s4 = 'strasse'\n",
+    "s3 == s4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b19a7795",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nfc_equal(s3, s4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ae929b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fold_equal(s3, s4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "909eb0f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fold_equal(s1, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "620a817e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fold_equal('A', 'a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "91bb806a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Normalização extrema: removendo acentos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "34e5a864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unicodedata\n",
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4eb61d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shave_marks(txt):\n",
+    "    \"\"\"Remove todas as marcas de diacríticos\"\"\"\n",
+    "    norm_txt = unicodedata.normalize('NFD', txt)\n",
+    "    shaved = ''.join(c for c in norm_txt\n",
+    "                     if not unicodedata.combining(c))\n",
+    "    return unicodedata.normalize('NFC', shaved)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3f84375c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Herr VoB: • X cup of OEtker” caffe latte • bowl of acai.'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order = 'Herr VoB: • X cup of OEtker” caffé latte • bowl of açai.'\n",
+    "shave_marks(order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8bb13b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Zecupoc, Zefiro'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Greek = 'Zéçupoç, Zéfiro'\n",
+    "shave_marks(Greek)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "7e30afd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shave_marks_latin(txt):\n",
+    "    \"\"\"Remove todas as marcas de diacríticos dos \n",
+    "    caracteres-base latinos\"\"\"\n",
+    "    norm_txt = unicodedata.normalize('NFD', txt)\n",
+    "    latin_base = False\n",
+    "    keepers = []\n",
+    "    for c in norm_txt:\n",
+    "        if unicodedata.combining(c) and latin_base:\n",
+    "            continue #ignora diacríticos em caracteres-base latinos\n",
+    "        keepers.append(c)\n",
+    "        # se não é um caractere combinado, é um novo caractere-base\n",
+    "        if not unicodedata.combining(c):\n",
+    "            latin_base = c in string.ascii_letters\n",
+    "    shaved = ''.join(keepers)\n",
+    "    return unicodedata.normalize('NFC', shaved)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8df32c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_map = str.maketrans(\"\"\",f,t^<''\"\",--~>\"\"\",\n",
+    "                           \"\"\"'f'*^<''\"\"---->\"\"\")\n",
+    "\n",
+    "multi_map = str.maketrans({\n",
+    "    '€': '<euro>',\n",
+    "    '…': '...',\n",
+    "    'Œ': 'OE',\n",
+    "    '™': '(TM)',\n",
+    "    'œ': 'oe',\n",
+    "    '‰': '<per mille>',\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "14eb1d35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_map.update(single_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4f525d38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dewinize(txt):\n",
+    "    \"Substitui símbolos Win1252 por caracteres ou sequências ASCII\"\n",
+    "    return txt.translate(multi_map)\n",
+    "def asciize(txt):\n",
+    "    no_marks = shave_marks_latin(dewinize(txt))\n",
+    "    no_marks = no_marks.replace('ß', 'ss')\n",
+    "    return unicodedata.normalize('NFKC', no_marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3880884f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Herr VoB: • X cup of OE*kerTM caffé la**e • bowl of açai.'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order = \"Herr VoB: • X cup of OEtkerTM caffé latte • bowl of açai.\"\n",
+    "dewinize(order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "09589977",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Herr VoB: • X cup of OE*kerTM caffe la**e • bowl of acai.'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asciize(order)"
+   ]
   }
  ],
  "metadata": {
