--- a/outros/Functions.ipynb
+++ b/outros/Functions.ipynb
@@ -437,6 +437,390 @@
     "for permutacao in itertools.permutations(lista[:3], 3):\n",
     "    print(permutacao)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab13851d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Erros e Tratamento de Exceções"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "47d70a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attempt_float(x):\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    #except (ValueError, TypeError)\n",
+    "    except:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9c7488dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.32"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attempt_float('1.32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d9c416ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'something'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attempt_float('something')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "035ad864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('teste.txt', 'w')\n",
+    "\n",
+    "try:\n",
+    "    write_to_file(f)\n",
+    "except:\n",
+    "    print('Failed')\n",
+    "else:\n",
+    "    print('Succeeded')\n",
+    "finally:\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a76425bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sasa', '121', 'sasa', '1212', 'sas', '121', '121', 'sasas', '414', '2345', '77', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'teste.txt'\n",
+    "# Por padrão, ele entende que é leitura\n",
+    "f = open(path)\n",
+    "lista = []\n",
+    "for line in f:\n",
+    "    lista.append(line[:-2])\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "efa1579d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sasas',\n",
+       " '1212',\n",
+       " 'sasas',\n",
+       " '12121',\n",
+       " 'sasa',\n",
+       " '1212',\n",
+       " '1212',\n",
+       " 'sasasa',\n",
+       " '4141',\n",
+       " '23452',\n",
+       " '774',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = [x.rstrip() for x in open(path)]\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d77f5523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2193bed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sasas', '1212', 'sasas', '12121', 'sasa', '1212', '1212', 'sasasa', '4141', '23452', '774', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(path) as f:\n",
+    "    lines = [x.rstrip() for x in f]\n",
+    "    print(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a2dd2d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sasas\\n1212'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(path)\n",
+    "f.read(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "42227fdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'sasas\\n1212'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f2 = open(path, 'rb') # Modo binário\n",
+    "f2.read(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dd995021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.tell()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e38d488a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f2.tell()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "13f26815",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "30425579",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'utf-8'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getdefaultencoding()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3979b475",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.seek(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "582e0303",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.read(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0e56707b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('tmp.txt', 'w') as handle:\n",
+    "    handle.writelines(x for x in open(path) if len(x) > 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4fe21bab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sasas\\n',\n",
+       " '1212\\n',\n",
+       " 'sasas\\n',\n",
+       " '12121\\n',\n",
+       " 'sasa\\n',\n",
+       " '1212\\n',\n",
+       " '1212\\n',\n",
+       " 'sasasa\\n',\n",
+       " '4141\\n',\n",
+       " '23452\\n',\n",
+       " '774\\n']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('tmp.txt') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines"
+   ]
   }
  ],
  "metadata": {
